--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; frame-src https://2048.io/ https://game206669.konggames.com/ https://2048game.com/; connect-src 'self' https:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; frame-src https://2048.io/ https://game206669.konggames.com/ https://2048game.com/; connect-src 'self' https:;">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BP6B15KZ90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BP6B15KZ90');
+    </script>
     <title>Wise Hero - Strategic Puzzle Adventure Game | Play Online</title>
     <meta name="description" content="Challenge your mind with Wise Hero, a strategic puzzle game that tests your logical thinking. Combine identical numbers to achieve higher scores and have fun!">
     <link rel="canonical" href="https://wisehero.site/">
